--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        /*JitPack依赖（github）*/
+        maven { url "https://jitpack.io" }
     }
 }
 
