创建1.0.0 分支版本

--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,33 @@ allprojects {
         jcenter()
         /*JitPack依赖（github）*/
         maven { url "https://jitpack.io" }
+        /*引用aar包*/
+        flatDir {
+            dirs 'libs', '../app/libs', '../paymodule/libs'
+        }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    /**SDK And Tools（SDK和工具）*/
+    //用于编译的SDK版本
+    compileSdkVersion = 28
+    //用于Gradle编译项目的工具版本
+    buildToolsVersion = "28.0.2"
+    //应用ID
+    applicationId = "com.aoji.smartconsult"
+    //最低支持Android版本
+    minSdkVersion = 15
+    //目标版本
+    targetSdkVersion = 28
+    //应用程序版本号
+    versionCode = 107
+    //应用程序版本名称
+    versionName = "1.0.7"
+    /**Dependencies（依赖关系）*/
+    supportVersion = "28.0.0"
 }
