--- a/moneyviewlibrary/build.gradle
+++ b/moneyviewlibrary/build.gradle
@@ -34,12 +34,8 @@ android {
     }
     /**自定义aar的名字*/
     android.libraryVariants.all { variant ->
-        variant.outputs.each { output ->
-            def outputFile = output.outputFile
-            if (outputFile != null && outputFile.name.endsWith('.aar')) {
-                def fileName = outputFile.name.replace(".aar", "-") + rootProject.ext.versionCode + ".aar"
-                output.outputFile = new File(outputFile.parent, fileName)
-            }
+        variant.outputs.all {
+            outputFileName = outputFileName.replace(".aar", "-") + rootProject.ext.versionCode + ".aar"
         }
     }
 }
