--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ allprojects {
         maven { url "https://jitpack.io" }
         /*引用aar包*/
         flatDir {
-            dirs 'libs', '../app/libs', '../paymodule/libs'
+            dirs 'libs', '../app/libs', '../moneyviewlibrary/libs'
         }
     }
 }
@@ -47,9 +47,9 @@ ext {
     //目标版本
     targetSdkVersion = 28
     //应用程序版本号
-    versionCode = 104
+    versionCode = 105
     //应用程序版本名称
-    versionName = "1.0.4"
+    versionName = "1.0.5"
     /**Dependencies（依赖关系）*/
     supportVersion = "28.0.0"
 }
